--- a/【公司法】第一章 总 则.html
+++ b/【公司法】第一章 总 则.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
     
-  【公司法】说了是村长
+  第一章 总 则 - 【公司法】说了是村长
   
   </title>
  <meta name="description" content="">
@@ -69,14 +69,10 @@
             </div>
             <div class="large-9 medium-9 columns">
 
- 
+ <div class="markdown-body">
+<h1>第一章 总 则</h1>
 
-
-	
-		<div class="markdown-body">
-		<h1>第一章 总 则</h1>
-
-		<p>本条例生效时间为：2013.12.28,截至2018年仍然有效<br/>
+<p>本条例生效时间为：2013.12.28,截至2018年仍然有效<br/>
 最近更新：2017.10.18</p>
 
 <hr/>
@@ -168,47 +164,42 @@
 <p>公司根据股东会或者股东大会、董事会决议已办理变更登记的，人民法院宣告该决议无效或者撤销该决议后，公司应当向公司登记机关申请撤销变更登记。</p>
 
 
-		</div>
-	
+</div>
 
- 
-	
+<br /><br />
+<hr />
 
- 
-	
+<div class="row clearfix">
+  <div class="large-6 columns">
+	<div class="text-left" style="padding:15px 0px;">
+		
+	</div>
+  </div>
+  <div class="large-6 columns">
+	<div class="text-right" style="padding:15px 0px;">
+		
+	        <a href="%E3%80%90%E5%85%AC%E5%8F%B8%E6%B3%95%E3%80%91%E7%AC%AC%E4%BA%8C%E7%AB%A0%20%E6%9C%89%E9%99%90%E8%B4%A3%E4%BB%BB%E5%85%AC%E5%8F%B8%E7%9A%84%E8%AE%BE%E7%AB%8B%E5%92%8C%E7%BB%84%E7%BB%87%E6%9C%BA%E6%9E%84.html" 
+	        title="Next Post: 第二章 有限责任公司的设立和组织机构">第二章 有限责任公司的设立和组织机构 &raquo;</a>
+	    
+	</div>
+  </div>
+</div>
 
- 
-	
+<div class="row">
+<div style="padding:0px 0.93em;" class="share-comments">
 
- 
-	
-
- 
-	
-
- 
-	
-
- 
-	
-
- 
-	
-
- 
-	
-
- 
-	
-
- 
-	
-
- 
-	
-
-  
-  
+</div>
+</div>
+<script type="text/javascript">
+	$(function(){
+		var currentURL = '%E3%80%90%E5%85%AC%E5%8F%B8%E6%B3%95%E3%80%91%E7%AC%AC%E4%B8%80%E7%AB%A0%20%E6%80%BB%20%E5%88%99.html';
+		$('#side-nav a').each(function(){
+			if($(this).attr('href') == currentURL){
+				$(this).parent().addClass('active');
+			}
+		});
+	});
+</script>  
 </div></div>
 
 
